      -  has peername : protected ro Sys::Socket::Sockaddr;
      +  has peername : protected Sys::Socket::Sockaddr;
      +  method peername : Sys::Socket::Sockaddr ();
    
    * The following fields and methods in the IO::File class are added, deleted, or changed.
    
      + method input_line_number : long ();
      
      + method set_input_line_number : void ($input_line_number : long);
      
    * The following fields and methods in the IO::Handle class are added, deleted, or changed.
      
      -  method blocking : void ($blocking : int);
      +  method blocking : int ();
      +  method set_blocking : void ($blocking : int);
      
      -  has blocking_flag : rw protected int;
      +  has nonblocking : protected int;
      
      -  has opened : ro protected int;
      +  method opened : int ();
      
    * fd field in IO::Socket class is moved to IO::Handle class.
    
0.206 2023-09-04
  [Prerequirement Changes]
    * SPVM::Sys 0.485 is required.
0.205 2023-09-04
  [Prerequirement Changes]
    * SPVM::Sys 0.484 is required.
0.204003 2023-08-22
  [Changes]
    * Type comments of the ioctl method in the IO::Handle are changed.
      -  method ioctl : int ($request : int, $request_arg : object = undef of Byte|Short|Int|Long|Float|Double|object);
      +  static method ioctl : int ($fd : int, $request : int, $request_arg_ref : object of byte[]|short[]|int[]|long[]|float[]|double[]|object = undef);
  [Bug Fix]
    * A bug is fixed: The blocking method in the IO::Handle has not work well in Windows.
0.204002 2023-08-22
  [Bug Fix]
    * A bug is fixed. FIONBIO has not been defined.
    
0.204001 2023-08-22
  [Prerequirement Changes]
    * SPVM::Sys 0.482 is required.
0.204  2023-08-18
  [New Features]
  
    The following methods are added to IO::Socket.
      +  method write : int ($string : string, $length : int = -1, $offset : int = 0);
      
      +  method read : int ($string : mutable string, $length : int = -1, $offset : int = 0);
      