@@ -42,6 +42,7 @@
       + method input_line_number : long ();
       
       + method set_input_line_number : void ($input_line_number : long);
+      + method truncate : int ($legnth : long);
       
     * The following fields and methods in the IO::Handle class are added, deleted, or changed.
       
@@ -54,6 +55,8 @@
       
       -  has opened : ro protected int;
       +  method opened : int ();
+      
+      method truncate : int ($legnth : long) throws an exception.
       
     * fd field in IO::Socket class is moved to IO::Handle class.
     
